@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-23T08:14:32Z",
-  "count_outdated" : 203,
-  "uniques_outdated" : 175,
+  "timestamp" : "2023-10-24T00:49:12Z",
+  "count_outdated" : 206,
+  "uniques_outdated" : 177,
   "count" : 214,
   "uniques" : 185,
   "clones" : [
-    {
-      "timestamp": "2023-10-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 2,
